tests/NormalTests/paczka1/fuzzy1/59981396.err
Error in line 4: sTvkPzyYHW A344 94,4
Error in line 20: E14T S155 35,46
Error in line 24: sTvkPzyYHW A344 95,1
Error in line 22: eEzOUpPBdm A344 83,4
Error in line 31: eEzOUpPBdm A203 35,6
Error in line 36: eEzOUpPBdm S774 63,9
